--- a/src/main/resources/theme/play/custom_games.fxml
+++ b/src/main/resources/theme/play/custom_games.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="gamesRoot" alignment="TOP_CENTER"
            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="com.faforever.client.game.CustomGamesController">
     <children>
@@ -28,14 +27,12 @@
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                <RowConstraints vgrow="ALWAYS"/>
             </rowConstraints>
             <children>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                    <children>
                         <HBox spacing="5.0">
                             <children>
-                                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
+                                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="SOMETIMES">
                                     <children>
                                         <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity"
                                                    mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
@@ -49,12 +46,6 @@
                                         <HBox alignment="BASELINE_LEFT"/>
                                     </children>
                                 </FlowPane>
-                                <Button fx:id="toggleSidePaneButton" minWidth="-Infinity" mnemonicParsing="false"
-                                        onAction="#toggleSidePane" text="%view.hideSidePane">
-                                    <padding>
-                                        <Insets right="50"/>
-                                    </padding>
-                                </Button>
                                 <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false"
                                               onAction="#onTableButtonClicked" styleClass="game-list-type"
                                               text="%view.table">
@@ -73,21 +64,25 @@
                                         <Label styleClass="icon" text=""/>
                                     </graphic>
                                 </ToggleButton>
+                                <Button fx:id="toggleSidePaneButton" mnemonicParsing="false"
+                                        onAction="#toggleSidePane" styleClass="icon-button" text="">
+                                </Button>
                             </children>
+                            <padding>
+                                <Insets bottom="10.0" left="20.0" right="-10.0" top="10.0"/>
+                            </padding>
                         </HBox>
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
-                </VBox>
                 <ScrollPane fx:id="gameDetailPane" hbarPolicy="NEVER" maxWidth="1.7976931348623157E308"
                             GridPane.columnIndex="1" GridPane.rowSpan="2147483647">
                     <content>
                         <fx:include fx:id="gameDetail" source="game_detail.fxml"/>
                     </content>
                 </ScrollPane>
-                <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308"
-                            maxWidth="1.7976931348623157E308" prefWidth="10000" GridPane.rowIndex="1"/>
+                <AnchorPane fx:id="gameViewContainer" prefWidth="10000" prefHeight="10" GridPane.rowIndex="1">
+                    <padding>
+                        <Insets left="20"/>
+                    </padding>
+                </AnchorPane>
             </children>
         </GridPane>
     </children>
