--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -26,19 +26,19 @@
 
   /* A bright color for highlighting/accenting objects.  For example: selected
    * text; selected items in menus, lists, trees, and tables; progress bars */
-  -fx-accent: -teal-500;
-  -dimmed-accent: -teal-900;
+  -fx-accent: #2b71d9;
+  -dimmed-accent: #1f519d;
   -fx-box-border: -grey-600;
 
   /* color of non-focused yet selected elements */
-  -fx-selection-bar-non-focused: -teal-900;
+  -fx-selection-bar-non-focused: #204277;
 
   /* Meaningful Colors */
   -good: -green-500;
   -warn: -orange-500;
   -bad: -red-500;
 
-  -fx-disabled-opacity: 0.8;
+  -fx-disabled-opacity: 0.7;
 
   SHADOW_COLOR: #00000099;
 
@@ -57,10 +57,10 @@
   REVIEW_SCORE_1: #ae453b;
 
   /* Chart Color Palette */
-  CHART_COLOR_1: #609E15;
-  CHART_COLOR_2: #9BD454;
-  CHART_COLOR_3: #117D3C;
-  CHART_COLOR_4: #42A86B;
+  CHART_COLOR_1: #2B71D9;
+  CHART_COLOR_2: #5998F9;
+  CHART_COLOR_3: #3888FF;
+  CHART_COLOR_4: #6398E8;
   CHART_COLOR_5: #AE3417;
   CHART_COLOR_6: #E9775C;
   CHART_COLOR_7: #951448;
@@ -71,19 +71,19 @@
      *
      * 20% opacity
      */
-  CHART_COLOR_1_TRANS_20: #609E1533;
-  CHART_COLOR_2_TRANS_20: #9BD45433;
-  CHART_COLOR_3_TRANS_20: #117D3C33;
-  CHART_COLOR_4_TRANS_20: #42A86B33;
+  CHART_COLOR_1_TRANS_20: #2B71D933;
+  CHART_COLOR_2_TRANS_20: #5998F933;
+  CHART_COLOR_3_TRANS_20: #3888FF33;
+  CHART_COLOR_4_TRANS_20: #6398E833;
   CHART_COLOR_5_TRANS_20: #AE341733;
   CHART_COLOR_6_TRANS_20: #E9775C33;
   CHART_COLOR_7_TRANS_20: #95144833;
   CHART_COLOR_8_TRANS_20: #C84F8033;
   /* 70% opacity */
-  CHART_COLOR_1_TRANS_70: #609E15b3;
-  CHART_COLOR_2_TRANS_70: #9BD454b3;
-  CHART_COLOR_3_TRANS_70: #117D3Cb3;
-  CHART_COLOR_4_TRANS_70: #42A86Bb3;
+  CHART_COLOR_1_TRANS_70: #2B71D9b3;
+  CHART_COLOR_2_TRANS_70: #5998F9b3;
+  CHART_COLOR_3_TRANS_70: #3888FFb3;
+  CHART_COLOR_4_TRANS_70: #6398E8b3;
   CHART_COLOR_5_TRANS_70: #AE3417b3;
   CHART_COLOR_6_TRANS_70: #E9775Cb3;
   CHART_COLOR_7_TRANS_70: #951448b3;
@@ -194,16 +194,20 @@
 .button-raised {
   -fx-padding: 0.7em 1em;
   -jfx-button-type: RAISED;
-  -fx-background-color: white;
+  -fx-background-color: #e19e3b;
   -fx-text-fill: -fx-dark-text-color;
 }
 .button-raised .icon {
   -fx-text-fill: -fx-dark-text-color;
 }
 
+.button-raised:disabled {
+  -fx-opacity: -fx-disabled-opacity;
+}
+
 .button:default:hover,
 .button-raised:hover {
-  -fx-background-color: -grey-200;
+  -fx-background-color: #ffb343;
 }
 
 .toggle-button {
@@ -988,7 +992,7 @@
 }
 
 .default-color0.chart-bar:highlighted-bar {
-  -fx-bar-fill: #FFA500;
+  -fx-bar-fill: #E19E3B;
 }
 
 /***************** Hint *****************/
