--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -26,12 +26,12 @@
 
   /* A bright color for highlighting/accenting objects.  For example: selected
    * text; selected items in menus, lists, trees, and tables; progress bars */
-  -fx-accent: -teal-500;
-  -dimmed-accent: -teal-900;
+  -fx-accent: -indigo-500;
+  -dimmed-accent: -indigo-800;
   -fx-box-border: -grey-600;
 
   /* color of non-focused yet selected elements */
-  -fx-selection-bar-non-focused: -teal-900;
+  -fx-selection-bar-non-focused: -indigo-800;
 
   /* Meaningful Colors */
   -good: -green-500;
@@ -57,10 +57,10 @@
   REVIEW_SCORE_1: #ae453b;
 
   /* Chart Color Palette */
-  CHART_COLOR_1: #609E15;
-  CHART_COLOR_2: #9BD454;
-  CHART_COLOR_3: #117D3C;
-  CHART_COLOR_4: #42A86B;
+  CHART_COLOR_1: #3F51B5;
+  CHART_COLOR_2: #757BD7;
+  CHART_COLOR_3: #353E9E;
+  CHART_COLOR_4: #5E5DB4;
   CHART_COLOR_5: #AE3417;
   CHART_COLOR_6: #E9775C;
   CHART_COLOR_7: #951448;
@@ -71,19 +71,19 @@
      *
      * 20% opacity
      */
-  CHART_COLOR_1_TRANS_20: #609E1533;
-  CHART_COLOR_2_TRANS_20: #9BD45433;
-  CHART_COLOR_3_TRANS_20: #117D3C33;
-  CHART_COLOR_4_TRANS_20: #42A86B33;
+  CHART_COLOR_1_TRANS_20: #3F51B533;
+  CHART_COLOR_2_TRANS_20: #757BD733;
+  CHART_COLOR_3_TRANS_20: #353E9E33;
+  CHART_COLOR_4_TRANS_20: #5E5DB433;
   CHART_COLOR_5_TRANS_20: #AE341733;
   CHART_COLOR_6_TRANS_20: #E9775C33;
   CHART_COLOR_7_TRANS_20: #95144833;
   CHART_COLOR_8_TRANS_20: #C84F8033;
   /* 70% opacity */
-  CHART_COLOR_1_TRANS_70: #609E15b3;
-  CHART_COLOR_2_TRANS_70: #9BD454b3;
-  CHART_COLOR_3_TRANS_70: #117D3Cb3;
-  CHART_COLOR_4_TRANS_70: #42A86Bb3;
+  CHART_COLOR_1_TRANS_70: #3F51B5b3;
+  CHART_COLOR_2_TRANS_70: #757BD7b3;
+  CHART_COLOR_3_TRANS_70: #353E9Eb3;
+  CHART_COLOR_4_TRANS_70: #5E5DB4b3;
   CHART_COLOR_5_TRANS_70: #AE3417b3;
   CHART_COLOR_6_TRANS_70: #E9775Cb3;
   CHART_COLOR_7_TRANS_70: #951448b3;
@@ -194,7 +194,7 @@
 .button-raised {
   -fx-padding: 0.7em 1em;
   -jfx-button-type: RAISED;
-  -fx-background-color: white;
+  -fx-background-color: -amber-700; /* white */
   -fx-text-fill: -fx-dark-text-color;
 }
 .button-raised .icon {
@@ -203,7 +203,7 @@
 
 .button:default:hover,
 .button-raised:hover {
-  -fx-background-color: -grey-200;
+  -fx-background-color: #F29800; /* -grey-200 */
 }
 
 .toggle-button {
