--- a/src/main/resources/theme/vault/map/map_detail.fxml
+++ b/src/main/resources/theme/vault/map/map_detail.fxml
@@ -1,157 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXProgressBar?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import java.lang.String?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapDetailRoot" maxHeight="1.7976931348623157E308"
-            maxWidth="1.7976931348623157E308" onMouseClicked="#onDimmerClicked" styleClass="dimmer"
-            xmlns="http://javafx.com/javafx/10.0.2" fx:controller="com.faforever.client.map.MapDetailController">
-  <children>
-      <AnchorPane onMouseClicked="#onContentPaneClicked" styleClass="modal-popup" AnchorPane.bottomAnchor="50.0"
-                  AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
-      <children>
-          <ScrollPane fx:id="scrollPane" fitToWidth="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
-                      AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
-              <content>
-                  <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                        spacing="20.0">
-                      <children>
-                          <GridPane fx:id="gridPane" hgap="20.0" vgap="20.0">
-                              <columnConstraints>
-                                  <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-                                  <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-                                  <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-                                  <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-                                  <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-                                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                              </columnConstraints>
-                              <rowConstraints>
-                                  <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-                                  <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-                                  <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-                                  <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
-                                  <RowConstraints fx:id="hideRow" fillHeight="false"/>
-                                  <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
-                                  <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="60.0" vgrow="ALWAYS"/>
-                              </rowConstraints>
-                              <children>
-                                  <ImageView fx:id="thumbnailImageView" fitHeight="256.0" fitWidth="256.0"
-                                             pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER"
-                                             GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
-                                  <VBox GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
-                                        GridPane.hgrow="ALWAYS">
-                                      <children>
-                                          <Label fx:id="nameLabel" styleClass="h1" text="&lt;Title&gt;"/>
-                                          <Label fx:id="mapIdLabel" text="#&lt;id&gt;"/>
-                                      </children>
-                                  </VBox>
-                                  <Label fx:id="dimensionsLabel" text="Label" GridPane.columnIndex="1"
-                                         GridPane.rowIndex="2">
-                                      <graphic>
-                                          <Label styleClass="icon" text=""/>
-                                      </graphic>
-                                  </Label>
-                                  <Label fx:id="maxPlayersLabel" graphicTextGap="10.0" text="&lt;Max Players&gt;"
-                                         GridPane.columnIndex="2" GridPane.rowIndex="2">
-                                      <graphic>
-                                          <Label styleClass="icon" text=""/>
-                                      </graphic>
-                                  </Label>
-                                  <Label fx:id="dateLabel" graphicTextGap="10.0" text="&lt;Date&gt;"
-                                         GridPane.columnIndex="3" GridPane.rowIndex="2">
-                                      <graphic>
-                                          <Label styleClass="icon" text=""/>
-                                      </graphic>
-                                  </Label>
-                                  <VBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnIndex="1"
-                                        GridPane.columnSpan="2147483647">
-                                      <HBox alignment="TOP_RIGHT" spacing="10.0">
-                                          <children>
-                                              <JFXButton fx:id="createGameButton" defaultButton="true"
-                                                         mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
-                                                         text="%games.create"/>
-                                              <JFXButton fx:id="installButton" defaultButton="true"
-                                                         mnemonicParsing="false" onAction="#onInstallButtonClicked"
-                                                         text="%mapVault.installButtonFormat"/>
-                                              <JFXButton fx:id="uninstallButton" mnemonicParsing="false"
-                                                         onAction="#onUninstallButtonClicked"
-                                                         text="%mapVault.uninstall"/>
-                                          </children>
-                                      </HBox>
-                                      <VBox fx:id="loadingContainer" alignment="TOP_RIGHT" maxWidth="300.0">
-                                          <children>
-                                              <Label fx:id="progressLabel"/>
-                                              <JFXProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308"
-                                                              progress="0.0"/>
-                                          </children>
-                                      </VBox>
-                                  </VBox>
-                                  <Label fx:id="authorLabel" styleClass="secondary" text="&lt;Author&gt;"
-                                         GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1"
-                                         GridPane.valignment="TOP"/>
-                                  <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%map.description"
-                                         GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
-                                         GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"/>
-                                  <Label fx:id="mapDescriptionLabel" maxWidth="1.7976931348623157E308" minWidth="0.0"
-                                         text="&lt;Description&gt;" wrapText="true" GridPane.columnIndex="1"
-                                         GridPane.columnSpan="2147483647" GridPane.rowIndex="6"
-                                         GridPane.valignment="TOP"/>
-                                  <HBox spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
-                                        GridPane.rowIndex="3">
-                                      <children>
-                                          <Label maxHeight="1.7976931348623157E308" text="%map.ranked"/>
-                                          <Label fx:id="isRankedLabel" maxHeight="1.7976931348623157E308"/>
-                                          <JFXButton fx:id="unrankButton" mnemonicParsing="false" onAction="#unrankMap"
-                                                     text="%map.unrank"/>
-                                      </children>
-                                  </HBox>
-                                  <HBox fx:id="hideBox" spacing="10.0" GridPane.columnIndex="1"
-                                        GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
-                                      <children>
-                                          <Label maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0"
-                                                 text="%map.hidden"/>
-                                          <Label fx:id="isHiddenLabel" maxHeight="1.7976931348623157E308"/>
-                                          <JFXButton fx:id="hideButton" minHeight="0.0" minWidth="0.0"
-                                                     mnemonicParsing="false" onAction="#hideMap" text="%map.hide"/>
-                                      </children>
-                                  </HBox>
-                              </children>
-                              <VBox.margin>
-                                  <Insets/>
-                              </VBox.margin>
-                          </GridPane>
-                          <Separator layoutX="10.0" layoutY="251.0" maxWidth="1.7976931348623157E308"/>
-                          <VBox alignment="TOP_CENTER" maxWidth="640.0">
-                              <children>
-                                  <fx:include fx:id="reviews" source="../review/reviews.fxml"/>
-                              </children>
-                          </VBox>
-                      </children>
-                      <padding>
-                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-                      </padding>
-                  </VBox>
-              </content>
-          </ScrollPane>
-          <JFXButton cancelButton="true" focusTraversable="false" onAction="#onCloseButtonClicked"
-                     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <styleClass>
-                  <String fx:value="window-button"/>
-                  <String fx:value="close-button"/>
-              </styleClass>
-          </JFXButton>
-      </children>
-    </AnchorPane>
-  </children>
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+
+
+ <AnchorPane fx:id="mapDetailRoot" onMouseClicked="#onContentPaneClicked" styleClass="modal-popup" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.map.MapDetailController">
+     <children>
+         <ScrollPane fx:id="scrollPane" fitToWidth="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
+             <content>
+                 <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
+                     <children>
+                         <GridPane fx:id="gridPane" hgap="20.0" vgap="20.0">
+                             <columnConstraints>
+                                 <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                             </columnConstraints>
+                             <rowConstraints>
+                                 <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                                 <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                                 <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                                 <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS" />
+                                 <RowConstraints fx:id="hideRow" fillHeight="false" />
+                                 <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS" />
+                                 <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="60.0" vgrow="ALWAYS" />
+                             </rowConstraints>
+                             <children>
+                                 <ImageView fx:id="thumbnailImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="TOP" />
+                                 <VBox GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS">
+                                     <children>
+                                         <Label fx:id="nameLabel" styleClass="h1" text="&lt;Title&gt;" />
+                                         <Label fx:id="mapIdLabel" text="#&lt;id&gt;" />
+                                     </children>
+                                 </VBox>
+                                 <Label fx:id="dimensionsLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                     <graphic>
+                                         <Label styleClass="icon" text="" />
+                                     </graphic>
+                                 </Label>
+                                 <Label fx:id="maxPlayersLabel" graphicTextGap="10.0" text="&lt;Max Players&gt;" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                     <graphic>
+                                         <Label styleClass="icon" text="" />
+                                     </graphic>
+                                 </Label>
+                                 <Label fx:id="dateLabel" graphicTextGap="10.0" text="&lt;Date&gt;" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                                     <graphic>
+                                         <Label styleClass="icon" text="" />
+                                     </graphic>
+                                 </Label>
+                                 <VBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
+                                     <HBox alignment="TOP_RIGHT" spacing="10.0">
+                                         <children>
+                                             <JFXButton fx:id="createGameButton" defaultButton="true" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="%games.create" />
+                                             <JFXButton fx:id="installButton" defaultButton="true" mnemonicParsing="false" onAction="#onInstallButtonClicked" text="%mapVault.installButtonFormat" />
+                                             <JFXButton fx:id="uninstallButton" mnemonicParsing="false" onAction="#onUninstallButtonClicked" text="%mapVault.uninstall" />
+                                         </children>
+                                     </HBox>
+                                     <VBox fx:id="loadingContainer" alignment="TOP_RIGHT" maxWidth="300.0">
+                                         <children>
+                                             <Label fx:id="progressLabel" />
+                                             <JFXProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0" />
+                                         </children>
+                                     </VBox>
+                                 </VBox>
+                                 <Label fx:id="authorLabel" styleClass="secondary" text="&lt;Author&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                                 <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%map.description" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+                                 <Label fx:id="mapDescriptionLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" text="&lt;Description&gt;" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" GridPane.valignment="TOP" />
+                                 <HBox spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+                                     <children>
+                                         <Label maxHeight="1.7976931348623157E308" text="%map.ranked" />
+                                         <Label fx:id="isRankedLabel" maxHeight="1.7976931348623157E308" />
+                                         <JFXButton fx:id="unrankButton" mnemonicParsing="false" onAction="#unrankMap" text="%map.unrank" />
+                                     </children>
+                                 </HBox>
+                                 <HBox fx:id="hideBox" spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+                                     <children>
+                                         <Label maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" text="%map.hidden" />
+                                         <Label fx:id="isHiddenLabel" maxHeight="1.7976931348623157E308" />
+                                         <JFXButton fx:id="hideButton" minHeight="0.0" minWidth="0.0" mnemonicParsing="false" onAction="#hideMap" text="%map.hide" />
+                                     </children>
+                                 </HBox>
+                             </children>
+                             <VBox.margin>
+                                 <Insets />
+                             </VBox.margin>
+                         </GridPane>
+                         <Separator layoutX="10.0" layoutY="251.0" maxWidth="1.7976931348623157E308" />
+                         <VBox alignment="TOP_CENTER" maxWidth="640.0">
+                             <children>
+                                 <fx:include fx:id="reviews" source="../review/reviews.fxml" />
+                             </children>
+                         </VBox>
+                     </children>
+                     <padding>
+                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                 </VBox>
+             </content>
+         </ScrollPane>
+         <JFXButton cancelButton="true" focusTraversable="false" onAction="#onCloseButtonClicked" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+             <styleClass>
+                 <String fx:value="window-button" />
+                 <String fx:value="close-button" />
+             </styleClass>
+         </JFXButton>
+     </children>
 </AnchorPane>
