WIP new submenu buttons

--- a/src/main/resources/theme/play/play.fxml
+++ b/src/main/resources/theme/play/play.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+<VBox fx:id="playRoot" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.faforever.client.play.PlayController">
-    <HBox fx:id="playRoot">
+    <HBox>
         <Pane prefWidth="65.0"/>
         <ToggleButton fx:id="customGamesButton" mnemonicParsing="false" onAction="#onCustomNavigateButtonClicked"
                       styleClass="navigation-button" text="%play.custom">
@@ -20,8 +20,12 @@
                       styleClass="navigation-button" text="%play.coop" toggleGroup="$playNavigation">
         </ToggleButton>
     </HBox>
-    <Separator prefWidth="300.0"/>
+    <Separator/>
     <AnchorPane fx:id="contentPane" maxHeight="1.7976931348623157E308"
                 maxWidth="1.7976931348623157E308"
-                VBox.vgrow="ALWAYS"/>
+                VBox.vgrow="ALWAYS">
+        <children>
+            <fx:include source="custom_games.fxml" fx:id="customGames" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+        </children>
+    </AnchorPane>
 </VBox>
