--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -15,7 +15,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="modal-popup" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.141"
+           fx:controller="com.faforever.client.game.CreateGameController" onMouseClicked="#onDimmerClicked" styleClass="dimmer">
+    <AnchorPane maxWidth="1000" minWidth="880" onMouseClicked="#onContentPaneClicked" styleClass="modal-popup">
+    <GridPane hgap="10.0" vgap="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
@@ -45,9 +50,6 @@
         <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3" />
         <JFXTextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2" GridPane.rowIndex="4" />
         <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS" />
-        <JFXButton layoutX="828.0" layoutY="462.0" maxWidth="1.7976931348623157E308"
-                   mnemonicParsing="false" onAction="#onCloseButtonClicked" text="%cancel" GridPane.columnIndex="3"
-                   GridPane.rowIndex="7"/>
         <JFXButton fx:id="createGameButton" defaultButton="true" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%game.create.create" GridPane.columnIndex="4" GridPane.rowIndex="7" />
         <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
             <children>
@@ -117,8 +119,14 @@
             </children>
         </HBox>
         <JFXCheckBox fx:id="onlyForFriendsCheckBox" mnemonicParsing="false" text="%game.create.onlyFriends" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
     </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
 </GridPane>
+    <JFXButton cancelButton="true" focusTraversable="false" onAction="#onCloseButtonClicked" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
+               styleClass="window-button, close-button">
+    </JFXButton>
+    </AnchorPane>
+<padding>
+    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+</padding>
+</StackPane>
